--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "Allows to turn your object constructors into classes extendable by this tiny factory. The factory is plugin-able and can enable interfaces, mixins and design by contract support to you pseudo-classes.",
   "version": "3.0.0",
   "author": {
-        "name": "Dmitry Sheiko",
-        "url": "http://dsheiko.com"
+    "name": "Dmitry Sheiko",
+    "url": "http://dsheiko.com"
   },
-
   "homepage": "https://github.com/dsheiko/xObject",
   "scripts": {
-      "test": "grunt test"
+    "test": "grunt test"
   },
   "licenses": [
     {
-        "type": "MIT",
-        "url": "http://github.com/fawek/codepainter/raw/master/LICENSE"
+      "type": "MIT",
+      "url": "http://github.com/fawek/codepainter/raw/master/LICENSE"
     }
   ],
   "repository": {
@@ -24,21 +23,20 @@
   },
   "maintainers": [
     {
-        "name": "Dmitry Sheiko",
-        "email": "me@dsheiko.com",
-        "web": "http://dsheiko.com"
+      "name": "Dmitry Sheiko",
+      "email": "me@dsheiko.com",
+      "web": "http://dsheiko.com"
     }
   ],
   "main": "./js/source/xObject.core.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-      "grunt": "~0.4.1",
-      "grunt-contrib-jshint": "~0.4.3",
-      "grunt-contrib-qunit": "~0.2.1",
-      "qunitjs": "1.x",
-      "grunt-contrib-jscs": ">= 0.1.2",
-      "uglify-js": ">= 2.0.0",
-      "grunt-contrib-uglify": ">=0.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-uglify": ">=0.1",
+    "grunt-jscodesniffer": ">=0.1.10",
+    "qunitjs": "1.x",
+    "uglify-js": ">= 2.0.0"
   }
 }
